fix contrast ratio of date element

--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ article a {
 
 .post-date {
   margin: 0px;
-  color: #7a7a7a;
+  color: #6b6b6b;
 }
 
 code {
